# ingress-playground

./: .gitignore  CMakeLists.txt  README.md  build.sh  tcp-server-ss.yaml  udp-server-ss.yaml
.gitea/workflows/: ci.yaml
Containers/: Dockerfile.tcp-server  Dockerfile.udp-server
include/sockets-cpp/: SocketCore.h  UdpSocket.h
tcpServer/: CMakeLists.txt  serverApp.cpp
traefik/: ingressRouteTcp.yaml  ingressRouteUdp.yaml  traefik-config.yaml
udpServer/: CMakeLists.txt  unicastApp.cpp
